syntax = "proto3";

package auth;

import "./inputs/sign-in.input.proto";
import "../../dtos/user.dto.proto";

service AuthService {
  rpc signIn (SignInInput) returns (UserDto) {}
}


